--- a/base/deployments/db-deployment-patch.yml
+++ b/base/deployments/db-deployment-patch.yml
@@ -1,11 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: postgres
 spec:
   selector:
     matchLabels:
       app: postgres
+  serviceName: postgres
   template:
     metadata:
       labels:
@@ -13,7 +14,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: 'postgres:14'
+        image: postgres:14
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5432
@@ -29,7 +30,12 @@ spec:
         volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgresdata
-      volumes:
-      - name: postgresdata
-        persistentVolumeClaim:
-          claimName: postgres-volume-claim
+  volumeClaimTemplates:
+  - metadata:
+      name: postgresdata
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: postgres-local-storage
+      resources:
+        requests:
+          storage: 1Gi
