--- a/base/service/service-patch.yml
+++ b/base/service/service-patch.yml
@@ -16,11 +16,13 @@ kind: Service
 metadata:
   name: base-service-db
 spec:
+  type: NodePort
   selector:
     app: postgres
   ports:
   - port: 5432
-    targetPort: 30951
+    targetPort: 5432
+    nodePort: 30951
 
 
 
