--- a/base/volumes/pvc.yml
+++ b/base/volumes/pvc.yml
@@ -1,27 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-volume-claim
-  labels:
-    app: postgres
-spec:
-  storageClassName: postgres-local-storage
-  resources:
-    requests:
-      storage: 10Gi
-  accessModes:
-    - ReadWriteOnce
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
   name: app-volume-claim
   labels:
-    app: app-data
+    app: baseapp
 spec:
   storageClassName: app-local-storage
   resources:
     requests:
-      storage: 10Gi
+      storage: 1Gi
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
