--- a/base/service/redis-svc-patch.yml
+++ b/base/service/redis-svc-patch.yml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-cluster
-  namespace: my-redis
+  name: redis
 spec:
-  type: NodePort  # Change to NodePort for external access
+  type: NodePort
   ports:
   - port: 6379
     targetPort: 6379
-    nodePort: 30952  # You can specify a port or let Kubernetes assign one
+    nodePort: 30952
   selector:
-    app: redis-cluster
+    app: redis
