--- a/base/volumes/pv.yml
+++ b/base/volumes/pv.yml
@@ -47,3 +47,29 @@ spec:
           operator: In
           values:
           - kind-worker
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: redis-volume
+  labels:
+    type: local
+    app: redis
+spec:
+  storageClassName: redis-local-storage
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  local:
+    path: /data/volumes/redis
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - kind-worker3
